--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,28 @@
-<h3>Header</h3>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand">Recipe Shopping list</a>
+        </div>
+
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Recipes</a></li> 
+                <li><a href="#">Shopping List</a></li> 
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown"> 
+                    <a href="" class="dropdown-toggle" role="button">
+                        Manage
+                    </a>
+
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Save</a></li>
+                        <li><a href="#">Fetch</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
