Basic components finalized

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,5 +1,16 @@
-<app-shopping-edit></app-shopping-edit>
+<div class="row">
+    <div class="col-xs-10">
+        <app-shopping-edit>
 
-<hr>
+        </app-shopping-edit>
 
-<p>The list</p>
+        <hr>
+
+        <ul class="list-group">
+            <a style="cursor: pointer" class="list-group-item" *ngFor="let ingredient of ingredients">
+                {{ ingredient.name }} ({{ ingredient.amount }})
+            </a>
+        </ul>
+
+    </div>
+</div>
