--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,7 +1,9 @@
 <div class="row">
-    <col-xs-12>
+    <div class="col-xs-12">
         <button class="btn btn-success">New Recipe</button>
-    </col-xs-12>
+    </div>
+        
+    
 </div>
 
 <hr>
