--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li><a style="cursor: pointer;" (click)="onClickRecipe()">Recipes</a></li> 
-                <li><a style="cursor: pointer;" (click)="onClickShopping()">Shopping List</a></li> 
+                <li><a style="cursor: pointer;" (click)="onSelect('recipe')">Recipes</a></li> 
+                <li><a style="cursor: pointer;" (click)="onSelect('shopping')">Shopping List</a></li> 
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
