--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,15 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img 
+        [src]="chosenRecipe.imagePath" alt="{{ chosenRecipe.name }}" 
+        class="img-responsive"
+        style="max-height: 200px">
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1> {{ chosenRecipe.name }}</h1>
     </div>
 </div>
 
@@ -29,11 +32,11 @@
 
 <div class="row">
     <div class="col-xs-12">
-        Description
+        {{ chosenRecipe.description }}
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingridients
+        {{ "Ingredients" }}
     </div>
 </div>
