--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,11 +2,16 @@
 
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (recipeChosen)="recipeChosen = $event"></app-recipe-list>
     </div>
 
     <div class="col-md-7">
-        <app-recipe-detail></app-recipe-detail>
+        <app-recipe-detail *ngIf="recipeChosen; else defaultDetail" [chosenRecipe]="recipeChosen"></app-recipe-detail>
     </div>
+
+    <ng-template #defaultDetail>
+        Choose a recipe to display
+    </ng-template>
+    
 
 </div>
