--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,20 +1,29 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form autocomplete="off">
             <div class="row">
                 <div class="col-sm-5 form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control"> 
+                    <input autocomplete="off" name="hidden" type="text" style="display:none;">
+                    <label for="ingredientName">Name</label>
+                    <input 
+                    type="text" 
+                    id="name" 
+                    class="form-control"
+                    #nameInput> 
                 </div>
                 <div class="col-sm-2 form-group">
-                    <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control"> 
+                    <label for="ingredientAmount">Amount</label>
+                    <input 
+                    type="number" 
+                    id="amount" 
+                    class="form-control"
+                    #amountInput> 
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Add</button>
+                    <button class="btn btn-success" type="submit" (click)="addNewItems()">Add</button>
                     <button class="btn btn-danger" type="button">Delete</button>
                     <button class="btn btn-primary" type="button">Clear</button>
                 </div>
