--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,14 +1,19 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-edit>
+        <app-shopping-edit (ingridientAdded)="onIngredientAdded($event)">
 
         </app-shopping-edit>
 
         <hr>
 
         <ul class="list-group">
-            <a style="cursor: pointer" class="list-group-item" *ngFor="let ingredient of ingredients">
+            <a 
+            style="cursor: pointer" 
+            class="list-group-item" 
+            *ngFor="let ingredient of ingredients">
+
                 {{ ingredient.name }} ({{ ingredient.amount }})
+
             </a>
         </ul>
 
