--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"> 
-                    <a href="" class="dropdown-toggle" role="button">
+                <li class="dropdown" appDropdown> 
+                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">
                         Manage
                         <span class="caret"></span>
                     </a>
